# -wuci-ji

./: .gitignore  .gitmodules  AGENTS.md  BUILD_NOTES.md  CNAME  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deep-research-report.md  meridian-install  package-lock.json  package.json  wrangler.toml
.github/: dependabot.yml
DLv0.5/: README.md  v0.6M1-HARDENING.md
audits/: README.md
authority/: wuci-release-root.fixture.sha256  wuci-release-root.fixture.txt  wuci-root.fixture.sha256  wuci-root.fixture.txt
daylight-equation/: README.md  SCORECARD.md  SCORECARD.v1.json  SOURCE.md
daylight-equation/rust/daylight-crypto/: Cargo.toml  README.md
daylight-equation/rust/daylight-crypto/src/: lib.rs  main.rs  nightlight.rs  v6.rs  wuci_daylight.rs
daylight-equation/rust/daylight-crypto/vectors/: daylight-v4-negative-parser-vectors-v1.txt  daylight-v4-reference-vector-v1.txt  daylight-v6-provider-kem-evidence-v1.txt  daylight-v6-provider-private-roundtrip-evidence-v1.txt  daylight-v6-reference-negative-corpus-v1.txt  daylight-v6-reference-seal-open-evidence-v1.txt  daylight-v6-schema-vector-v1.txt  nightlight-v6-deep-assault-assessment-v1.txt  nightlight-v6-equation-battery-v1.txt
daylight/v15-solstice/: README.md  pyproject.toml
daylight/v15-solstice/examples/: corpus.seed.jsonl  expected-scorecard.v15-solstice.json  ledger.seed.jsonl  output-ledger.v15-solstice.jsonl  reproducibility-receipt.v15-solstice.json
daylight/v15-solstice/rules/: external-rootset.solstice.json  obligations.v15.json  weights.v13.json
daylight/v15-solstice/schema/: artifact-manifest.solstice.schema.json  external-attestation.solstice.schema.json  scorecard.solstice.schema.json
daylight/v15-solstice/src/: __init__.py  artifact_verify.py  canonical_json.py  cli.py  corpus.py  external_attestation.py  ledger.py  obligations.py  scoring.py  semantic_evidence.py  solstice_harness.py
daylight/v15-solstice/tests/: __init__.py  helpers.py  test_artifact_manifest_closure.py  test_output_ledger_transition.py  test_semantic_evidence_required.py  test_signed_external_credit.py  test_unsigned_external_no_credit.py  test_weight_vector_tamper_rejected.py
daylight/v16-analemma/: README.md  pyproject.toml
daylight/v16-analemma/examples/: designed-next-score.v16-analemma.json
daylight/v16-analemma/rules/: proof-units.v1.json
daylight/v16-analemma/schema/: analemma-manifest.schema.json  analemma-report.schema.json  analemma-resolution.schema.json
daylight/v16-analemma/src/: __init__.py  analemma.py  canonical_json.py  cli.py  solstice_bridge.py
daylight/v16-analemma/tests/: helpers.py  test_analemma_baseline.py  test_analemma_progress_and_debt.py  test_analemma_rejection_rules.py  test_analemma_report_artifact.py
daylight/v16-zenith/: README.md  pyproject.toml
daylight/v16-zenith/schema/: zenith-manifest.schema.json  zenith-report.schema.json  zenith-resolution.schema.json
daylight/v16-zenith/src/: __init__.py  canonical_json.py  cli.py  solstice_bridge.py  zenith_contract.py  zenith_verifier.py
daylight/v16-zenith/tests/: __init__.py  helpers.py  test_zenith_current_baseline.py  test_zenith_rejection_rules.py  test_zenith_report_artifact.py
docs/: APERTURE_BASTION_SECURITY_BOUNDARY.md  ASSEMBLY_TEST_STRATEGY.md  BUILD_TARGETS.md  CI_SCOPE.md  CONTRIBUTOR_BOOTSTRAP.md  DAYLIGHT_AI_ASSURANCE_STANDARD.md  DAYLIGHT_AI_SCORING_ASSURANCE_LEDGER.md  DAYLIGHT_EQUATION_STANDARD.md  DAYLIGHT_NPT_V1.md  DAYLIGHT_NPT_V1_CLOSEOUT.md  DAYLIGHT_NPT_V1_CODEX_GUIDE.md  DAYLIGHT_SCORE_INTEGRITY_AUDIT.md  DAYLIGHT_SSV_V1.md  DAYLIGHT_V15_MERIDIAN_SOFTWARE_ARTIFACT.md  DAYLIGHT_V20_ATTESTATION_VERIFICATION.md  DAYLIGHT_V20_CANONICAL_VERIFIER_OUTPUT.md  DAYLIGHT_V20_EXTERNAL_EVIDENCE_PROTOCOL.md  DAYLIGHT_V20_FIREWALL_PROFILE_REVIEW.md  DAYLIGHT_V20_INDEPENDENT_REBUILD_RECEIPT.md  DAYLIGHT_V20_REBUILD_RECEIPT_PROTOCOL.md  DAYLIGHT_V20_REVIEWER_PACKET.md  DAYLIGHT_V20_REVIEWER_QUICKSTART.md  FUZZING.md  (+84 more)
penumbra/: Cargo.toml  README.md
penumbra/src/: lib.rs  main.rs
penumbra/tests/: penumbra.rs
(+1473 files in other folders)
