[package]
name = "wuci-penumbra"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "wuci_penumbra"
path = "src/lib.rs"

[[bin]]
name = "penumbra"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
getrandom = "=0.2.16"
hkdf = "=0.12.4"
sha2 = "=0.11.0"
subtle = "=2.6.1"
zeroize = "=1.9.0"
