[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daylight-solstice"
version = "15.1.0"
description = "Daylight v15+ Solstice: hermetic evidence-closure scoring and artifact verification for Wuci-Ji research artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Wuci-Ji" }]
keywords = ["daylight", "solstice", "evidence", "scoring", "verification", "wuci-ji"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/chasebryan/-wuci-ji/blob/main/docs/WUCI_DAYLIGHT_V15_SOLSTICE.md"
Source = "https://github.com/chasebryan/-wuci-ji"

[project.scripts]
daylight-solstice = "src.cli:main"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
# Packaged for reference; runtime resolves these from the source tree (editable
# install) via PACKAGE_ROOT. A non-editable wheel should pass explicit paths.
src = []
