[package]
name = "daylight-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
aes-gcm = { version = "=0.10.3", default-features = false, features = ["aes", "alloc"] }
argon2 = { version = "=0.5.3", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
daylight-model = { path = "../daylight-model" }
fips203 = { version = "=0.4.3", default-features = false, features = ["ml-kem-1024"] }
fips204 = { version = "=0.4.6", default-features = false, features = ["ml-dsa-87"] }
fips205 = { version = "=0.4.1", default-features = false, features = ["slh_dsa_shake_256s"] }
hkdf = { version = "=0.12.4", default-features = false }
p384 = { version = "=0.13.1", default-features = false, features = ["ecdh"] }
rand_core = { version = "=0.6.4", default-features = false }
sha2 = { version = "=0.11.0", default-features = false }
sha3 = { version = "=0.10.9", default-features = false }
